--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
 
-<h2>Add User Form:</h2>
+<h2>A Sample Web Page:</h2>
+
+<div>
+  <input type="checkbox" checked disabled>form
+  <input type="checkbox" checked disabled>input
+  <input type="checkbox" checked disabled>radio
+  <input type="checkbox" checked disabled>select
+  <input type="checkbox" checked disabled>table
+  <input type="checkbox"disabled>list
+  <input type="checkbox"disabled>file
+</div>
+
+<h2>Add Users:</h2>
 
 <form id="userForm" action="#" method="POST">
     <div class="form-group">
