--- a/index.html
+++ b/index.html
@@ -10,15 +10,32 @@
 
 <h2>A Sample Web Page:</h2>
 
-<div>
-  <input type="checkbox" checked disabled>form
-  <input type="checkbox" checked disabled>input
-  <input type="checkbox" checked disabled>radio
-  <input type="checkbox" checked disabled>select
-  <input type="checkbox" checked disabled>table
-  <input type="checkbox"disabled>list
-  <input type="checkbox"disabled>file
-</div>
+<ul>
+  <li>html components:
+    </br>
+    <input type="checkbox" checked disabled>form
+    <input type="checkbox" checked disabled>input
+    <input type="checkbox" checked disabled>radio
+    <input type="checkbox" checked disabled>select
+    <input type="checkbox" checked disabled>table
+    <input type="checkbox" checked disabled>list
+    <input type="checkbox"disabled>file    
+  </li>
+  <li>script functions:
+    </br>
+    <ul>
+      <li>renderUsers(users)</li>
+      <li>deleteUser(index)</li>
+    </ul>
+  </li>
+  <li>script events:
+    </br>
+    <ul>
+      <li>userForm ('submit')</li>
+      <li>$slider ('change')</li>
+    </ul>
+  </li>
+</ul>
 
 <h2>Add Users:</h2>
 
